tests/baselines/reference/accessorsInAmbientContext.errors.txt
==== tests/cases/compiler/accessorsInAmbientContext.ts (8 errors) ====
    
    declare module M {
        class C {
            get X() { return 1; }
            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1086: Accessors are not allowed in ambient contexts.
            set X(v) { }
            ~~~~~~~~~~~~
!!! error TS1086: Accessors are not allowed in ambient contexts.
    
            static get Y() { return 1; }
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1086: Accessors are not allowed in ambient contexts.
            static set Y(v) { }
            ~~~~~~~~~~~~~~~~~~~
!!! error TS1086: Accessors are not allowed in ambient contexts.
        }
    }
    
    declare class C {
        get X() { return 1; }
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1086: Accessors are not allowed in ambient contexts.
        set X(v) { }
        ~~~~~~~~~~~~
!!! error TS1086: Accessors are not allowed in ambient contexts.
    
        static get Y() { return 1; }
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1086: Accessors are not allowed in ambient contexts.
        static set Y(v) { }
        ~~~~~~~~~~~~~~~~~~~
!!! error TS1086: Accessors are not allowed in ambient contexts.
    }